# ti_clang_linkinfo_analysis

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  TODO_for_human.md  agents_tasklist.md  code_classifier.py  linkinfo_graph.py  linkinfo_parser.py  local_ollama_openai_test.py  pyproject.toml  requirements.md
.github/workflows/: tests-and-build.yml
demo/: README.md  run_graph_exports.py  run_icicle_plot.py  run_markdown_exports.py
dev_archive/: code_classifier.py  code_classifier_only_inputfiles.py  initial_feature_groups.json
docs/: ARCHITECTURE.md  README.md
example_files/: dpl_demo_debug_linkinfo.xml  dpl_demo_release_linkinfo.xml
powerpoint_presentation/: .~lock.sammlung.odp#  sammlung.odp
src/ti_clang_linkinfo_analysis/: __init__.py  _errors.py  _folder_hierarchy.py  _icicle.py  _markdown.py  _models.py  _path_utils.py  _xml_parser.py  analyzer.py  linkinfo_graph.py  linkinfo_parser.py
tests/: conftest.py  test_analyzer_folder_hierarchy.py  test_folder_hierarchy.py  test_graph_folder_grouping.py  test_icicle_plot.py  test_markdown_exports.py  test_parser_baseline.py
