[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ti-clang-linkinfo-analysis"
version = "0.1.0"
description = "Analysis tools for TI Clang linkinfo.xml files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Stefan" }]
keywords = ["ti", "clang", "linkinfo", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["networkx>=3.2", "pyvis>=0.3", "plotly>=5.0"]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=ti_clang_linkinfo_analysis --cov-report=term-missing"
